--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,14 @@ body, a:link, a:visited, a:active{
   height:100%;
   width:auto;
 }
+.danceMove {
+  transform: scale(-1, 1);
+  -moz-transform: scale(-1, 1);
+  -webkit-transform: scale(-1, 1);
+  -o-transform: scale(-1, 1);
+  -khtml-transform: scale(-1, 1);
+  -ms-transform: scale(-1, 1);
+}
 .rick{
   height:200px;
   width:200px;
